timeline bug fixes: date formatting, collapse all, formatting
add collapse all to property detail scenarios

spacing

precommit

opt for ES2021 replaceAll function

typo

--- a/seed/static/seed/scss/style.scss
+++ b/seed/static/seed/scss/style.scss
@@ -4744,7 +4744,7 @@ ul.r-list {
       margin: 0 20px;
     }
     .event-detail {
-      min-width: 100px;
+      min-width: 150px;
       margin: 0 30px;
     }
   }
